Image componentine çalışmaya devam et, Description ve Dater'a da aynısını yap

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #fcfad6;
 }
 
 .App-logo {
@@ -28,6 +29,18 @@
   color: #61dafb;
 }
 
+.App h4 {
+  color: purple;
+  text-align: left;
+  padding: 1rem;
+}
+
+.App p,
+span {
+  color: purple;
+  text-align: left;
+  padding: 1rem;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
